# redis-study

./: .env.example  .gitignore  README.md  pyproject.toml
redis_study/: __init__.py  __main__.py
